Bug 155647 - Proofreading (grammar checking) does not work in version 7.5.4
Summary: Proofreading (grammar checking) does not work in version 7.5.4
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.4.2 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:7.6.0 target:7.5.5
Keywords: bibisectNotNeeded, regression
: 155849 155860 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-06-02 11:30 UTC by Mike Kaganski
Modified: 2023-07-13 20:33 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2023-06-02 11:30:55 UTC
After commit a7ce722b476c4bb0c9a113ae0c2759181edfe48f, LanguageTool Server does not check documents.
Comment 1 Commit Notification 2023-06-02 13:43:34 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/72869f559021ced673465cb9aa82e461ecaafc91

tdf#155647: Pass XFlatParagraph by normal Reference, not WeakReference

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-06-05 12:29:38 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/c630c3121bdf00dae72586b01dd0517328ba89ff

tdf#155647: Pass XFlatParagraph by normal Reference, not WeakReference

It will be available in 7.5.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Mike Kaganski 2023-06-15 11:50:24 UTC
*** Bug 155849 has been marked as a duplicate of this bug. ***
Comment 4 Mike Kaganski 2023-06-21 04:11:52 UTC
*** Bug 155860 has been marked as a duplicate of this bug. ***
Comment 5 Mike Kaganski 2023-06-21 05:27:47 UTC
FTR: this bug affected all proofing, not only integrated LanguageTool.
Comment 6 Daniele 2023-07-13 16:46:14 UTC
(In reply to Commit Notification from comment #2)
> Mike Kaganski committed a patch related to this issue.
> It has been pushed to "libreoffice-7-5":
> 
> https://git.libreoffice.org/core/commit/
> c630c3121bdf00dae72586b01dd0517328ba89ff
> 
> tdf#155647: Pass XFlatParagraph by normal Reference, not WeakReference
> 
> It will be available in 7.5.5.
> 
> The patch should be included in the daily builds available at
> https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
> information about daily builds can be found at:
> https://wiki.documentfoundation.org/Testing_Daily_Builds
> 
> Affected users are encouraged to test the fix and report feedback.

Hi Mike, thanks!!! Can this patch be tested already?
If so, where do I download 7.5.5?
Comment 7 Mike Kaganski 2023-07-13 17:43:06 UTC
(In reply to Daniele from comment #6)

On the official download page, scroll to the bottom, and check under pre-released versions.

However, please note that this is completely unrelated to your bug 151358; this is the one I created myself, only appeared in 7.5.4. Yours is likely partially fixed by my other changes (where it didn't check some languages like Spanish), and partially missing checkboxes under Options->Language Settings->Writing Aids->Available Language Modules->Edit.

Note that in *your* case, the grammar checking was functional (both LanguageTool extension, and LanguageTool built-in were working (at least partially)), while the issue here was completely non-functional grammar check.